load("@bazel_skylib//rules:common_settings.bzl",
     "bool_flag", "string_flag")

load("@makeheaders//rules:makeheaders.bzl", "makeheaders")

load("//config/cc:CONFIG.bzl",
     "BASE_COPTS",
     "BASE_LINKOPTS",
     "PROFILE")

exports_files(["emit_build_bazel.c",
               "emit_ocamlsdk.c",
               "emit_pkg_bindir.c",
               "dune-package.c",
               "utils.c",
               "versions.c"])

###########
cc_library(
    name = "tools_opam",
    srcs = [
        "emit_build_bazel.c",
        "emit_ocamlsdk.c",
        "emit_pkg_bindir.c",
        "spawn_cmd.c",
        "utils.c",
        "versions.c",
        ":mkhdrs",
        "dune-package.c",
        # "//lib/templates/compiler_libs",
        # "//lib/templates/ocamlsdk",
        # "//lib/templates/toolchain",
    ],
    includes = [".", "$(GENDIR)"],
    hdrs = ["tools_opam.h"],
    alwayslink = True,
    # linkopts = select({
    #     # static linkage under -c opt: we need to retain
    #     # one symbol from libdune_s7:
    #     "@platforms//os:macos": [
    #         "-Xlinker", "-exported_symbol",
    #         "-Xlinker", "'_libdune_s7_init'"],
    #     "//conditions:default": []
    # }),
    implementation_deps = [
        "@findlibc//lib:findlibc",
        "@runfiles//lib:runfiles",
        "@sfsexp//src:sfsexp",
    ],
    copts = BASE_COPTS + [
        # "-ftime-report"
        # only for clang 15/
        # "-Wno-gnu-statement-expression-from-macro-expansion"
    ],
    defines = PROFILE + select({
        ## for dirent->d_type macros:
        "@platforms//os:linux": ["_DEFAULT_SOURCE"],
        "//conditions:default": []
    }),
    local_defines = [
        "BAZEL_CURRENT_REPOSITORY=\\\"{}\\\"".format(package_relative_label("@tools_opam").repo_name)
    ],
    data = [
        "//lib/templates/compiler_libs:buildfiles",
        "//lib/templates/ocamlsdk:buildfiles",
        "//lib/templates/toolchain:buildfiles"
    ],
    visibility = ["//visibility:public"]
)

makeheaders(
    name = "mkhdrs",
    hdrs_srcs = [
        "emit_build_bazel.c",
        "emit_ocamlsdk.c",
        "emit_pkg_bindir.c",
        "spawn_cmd.c",
        "utils.c",
        "versions.c",
        "dune-package.c",
    ],
    additional_srcs = [
        # "//lib/templates/compiler_libs",
        # "//lib/templates/ocamlsdk",
        # "//lib/templates/toolchain",
        "@liblogc//macros:ansi_colors.h",
    ] + select({
        "@obazl_config_cc//profile:dev?": [
            "@liblogc//macros:logging_debug.h",
            # "@libs7//macros:s7_logging_debug.h"
        ],
        "//conditions:default": [
            "@liblogc//macros:logging_ndebug.h",
            # "@libs7//macros:s7_logging_ndebug.h"
        ]
    }),
    visibility = ["//visibility:public"]
)

makeheaders(
    name = "mkhdrs_export",
    out = "tools_opam.h",
    export_interface = True,
    hdrs_srcs = [
        "emit_build_bazel.c",
        "emit_ocamlsdk.c",
        "emit_pkg_bindir.c",
        "spawn_cmd.c",
        "utils.c",
        "versions.c",
    ],
    additional_srcs = [
        "@liblogc//macros:ansi_colors.h",
    ] + select({
        "@obazl_config_cc//profile:dev?": [
            "@liblogc//macros:logging_debug.h",
        ],
        "//conditions:default": [
            "@liblogc//macros:logging_ndebug.h",
        ]
    }),
    visibility = ["//visibility:public"]
)
