load("//bootstrap:BUILD.bzl", "CMD_FLAGS", "BOOTSTRAP_INCLUDES")

exports_files(glob(["**"]))

cc_binary(
    name  = "man",
    srcs  = ["man.c"],
    defines = select({
        "//bzl/debug/trace": [], # "DEBUG_TRACE"],
        "//conditions:default":   []
    }),
    copts = CMD_FLAGS + BOOTSTRAP_INCLUDES,
    deps = ["//bootstrap"],
)

