load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library( # for stardoc
    name = "bootstrap",
    srcs = ["bootstrap.bzl"],
    visibility = ["//visibility:public"],
)

bzl_library( # for stardoc
    name = "providers",
    srcs = ["providers.bzl"],
    visibility = ["//visibility:public"],
)

