cc_binary(
    name  = "status",
    srcs  = ["status.c"],
    defines = select({
        "//bzl/host:debug": [], # "DEBUG_TRACE"],
        "//conditions:default":   []
    }),
    copts = [
        "-std=c11",
        "-pedantic-errors",

        "-I",
        "-I$(GENDIR)",

        "-Ibootstrap",
        "-I$(GENDIR)/bootstrap",

        "-Iopam/bootstrap",
        "-I$(GENDIR)/opam/bootstrap",

        "-Iexternal/opam/bootstrap",
        "-I$(GENDIR)/external/opam/bootstrap",
    ],
    deps = ["//bootstrap"],
)
