load("@bazel_skylib//rules:common_settings.bzl", "bool_flag")

package(default_visibility = ["//visibility:public"])

config_setting(
    name = "debug",
    values = {"compilation_mode": "dbg"},
)

################################################################

bool_flag(name = "trace", build_setting_default = False)
bool_flag(name = "verbose", build_setting_default = False)

# config_setting(name = "lang_en", flag_values = {":lang": "en"})
