load("@rules_cc//cc:defs.bzl", "cc_binary")
load("@makeheaders//rules:makeheaders.bzl", "makeheaders")
load("//config/cc:CONFIG.bzl",
     "BASE_COPTS",
     "BASE_LINKOPTS",
     "PROFILE",
     "define_module_version")

# LOCAL_REPO=repo_name()
## ERROR: repo_name not defined (v 7.0)
LOCAL_REPO=repository_name()[1:]   # "" or "coswitch~2.0.0" etc

exports_files(["coswitch.c"])

##########
cc_binary(
    name  = "switch",
    visibility = ["//visibility:public"],
    srcs  = [
        "main.c",
        "emit_ocamlsdk_repo.c",
        "coswitch.c",
        ":mkhdrs",
    ],
    deps = [
        "//lib:tools_opam",
        "@findlibc//lib:findlibc",
        "@libs7//lib:s7",
        "@opamc//lib:opamc",
        # "@runfiles//lib:runfiles",
        "@liblogc//lib:logc",
        "@gopt//lib:gopt",
        "@uthash//lib:uthash",
        # "@cwalk//src:cwalk",
        "@xdgc//lib:xdgc",
    ],
    copts = BASE_COPTS + [
        "-I$(GENDIR)/config/switch"
    ],
    features = ["layering_check"],
    linkopts = BASE_LINKOPTS + [
        # "--verbose",
        # "-v",
    ],
    defines = PROFILE + select({
        ## for realpath
        "@platforms//os:linux": ["_XOPEN_SOURCE=500"],
        "//conditions:default": []
    }),
    local_defines = define_module_version() + [
        "LOCAL_REPO=\\\"{}\\\"".format(LOCAL_REPO),
        # "BAZEL_CURRENT_REPOSITORY=\\\"{}\\\"".format(repo_name()),
        "BAZEL_CURRENT_REPOSITORY=\\\"{}\\\"".format(package_relative_label("@tools_opam").repo_name)
    ],
    linkstatic = 1,
)

########
makeheaders(
    name = "mkhdrs",
    hdrs_srcs = [
        "main.c",
        "emit_ocamlsdk_repo.c",
        "coswitch.c",
    ],
    additional_srcs = [
        "//lib:emit_build_bazel.c",
        "//lib:emit_ocaml_repo.c",
        "//lib:emit_pkg_bindir.c",
        "//lib:registry.c",
        "//lib:utils.c",
        "//lib:versions.c",
       "@liblogc//macros:ansi_colors.h"
    ] + select({
        "@obazl_config_cc//profile:dev?": [
            "@liblogc//macros:logging_debug.h"
        ],
        "//conditions:default": [
            "@liblogc//macros:logging_ndebug.h"
        ]
    }),
)
