load("@rules_cc//cc:defs.bzl", "cc_binary")
load("@makeheaders//rules:makeheaders.bzl", "makeheaders")
load("//config/cc:CONFIG.bzl",
     "BASE_COPTS",
     "BASE_LINKOPTS",
     "PROFILE",
     "define_module_version")

# LOCAL_REPO=repo_name()
## ERROR: repo_name not defined (v 7.0)
LOCAL_REPO=repository_name()[1:]

##########
cc_binary(
    name  = "config",
    visibility = ["//visibility:public"],
    srcs  = [
        "main.c",
        "config_pkg.c",
        "ext_emit_build_bazel.c",
        ":mkhdrs",
    ],
    deps = [
        "//lib:tools_opam",
        "@cwalk//lib:cwalk",
        "@findlibc//lib:findlibc",
        "@gopt//lib:gopt",
        "@liblogc//lib:logc",
        "@runfiles//lib:runfiles",
        "@uthash//lib:uthash",
    ],
    includes = ["."],
    copts = BASE_COPTS + [
        "-I$(GENDIR)/config/pkg",
    ],
    features = ["layering_check"],
    linkopts = BASE_LINKOPTS + [
        # "--verbose",
        # "-v",
    ],
    defines = PROFILE + select({
        ## for realpath
        "@platforms//os:linux": ["_XOPEN_SOURCE=500"],
        "//conditions:default": []
    }),
    local_defines = define_module_version() + [
        "LOCAL_REPO=\\\"{}\\\"".format(LOCAL_REPO),
        "BAZEL_CURRENT_REPOSITORY=\\\"{}\\\"".format(package_relative_label("@tools_opam").repo_name)
    ],
    linkstatic = 1,
)

########
makeheaders(
    name = "mkhdrs",
    hdrs_srcs = [
        "main.c",
        "config_pkg.c",
        "ext_emit_build_bazel.c"
    ],
    additional_srcs = [
        "//lib:tools_opam.h",
        "@liblogc//macros:ansi_colors.h"
    ] + select({
        "@obazl_tools_cc//profile:dev?": [
            "@liblogc//macros:logging_debug.h"
        ],
        "//conditions:default": [
            "@liblogc//macros:logging_ndebug.h"
        ]
    }),
)

